# ThorsIOUtil

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.config.in  README.md  X  config.h.in  configure  configure.ac  format.h  test.cpp
docSource/: config.json
docSource/source/class/: ThorsIOUtil.1.SignConversionOption-Lchar-R.md  ThorsIOUtil.1.SignConversionOption-Lint-R.md  ThorsIOUtil.1.SignConversionOption-Llong-R.md  ThorsIOUtil.1.SignConversionOption-Llong-long-R.md  ThorsIOUtil.1.SignConversionOption-Lshort-R.md  ThorsIOUtil.1.SignConversionOption-Lunsigned-char-R.md  ThorsIOUtil.1.SignConversionOption-Lunsigned-int-R.md  ThorsIOUtil.1.SignConversionOption-Lunsigned-long-R.md  ThorsIOUtil.1.SignConversionOption-Lunsigned-long-long-R.md  ThorsIOUtil.1.SignConversionOption-Lunsigned-short-R.md  ThorsIOUtil.1.SignConversionOption.md  ThorsIOUtil.Format.Format.md  ThorsIOUtil.FormatInfo.FormatInfo.md  ThorsIOUtil.Formatter.Formatter.md  ThorsIOUtil.Formatter.NormalizeChar.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lchar-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lint-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Llong-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Llong-long-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lshort-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lunsigned-char-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lunsigned-int-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lunsigned-long-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lunsigned-long-long-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption-Lunsigned-short-R.md  ThorsIOUtil.SignConversionOption.SignConversionOption.md  ThorsIOUtil.SignConversionOption.SignConversionOption_char.md  ThorsIOUtil.SignConversionOption.SignConversionOption_int.md  ThorsIOUtil.SignConversionOption.SignConversionOption_long.md  ThorsIOUtil.SignConversionOption.SignConversionOption_short.md  ThorsIOUtil.SignConversionOption.SignConversionOption_unsigned.md  ThorsIOUtil.printToStream.CharIntConverter-Lchar-R.md  ThorsIOUtil.printToStream.CharIntConverter-Lunsigned-char-R.md  ThorsIOUtil.printToStream.CharIntConverter.md  ThorsIOUtil.printToStream.CharIntConverter_char.md  ThorsIOUtil.printToStream.CharIntConverter_unsigned.md
docSource/source/function/: ThorsIOUtil.Format.make_cppformat.md  ThorsIOUtil.Format.make_format.md  ThorsIOUtil.printIntToStream.printIntToStream.md  ThorsIOUtil.printStringToStream.printStringToStream.md  ThorsIOUtil.printToStream.printToStream.md  ThorsIOUtil.printToStream.printToStreamDefault.md  (+1 more)
docSource/source/group/: api.md  (+14 more)
docs/: index.html
src/: Makefile
src/ThorsIOUtil/: Example.cpp  Example.h  Format.h  FormatInfo.h  Formatter.h  Makefile  SignConversionOption.h  ThorsIOUtilConfig.h.in  Utility.h  fake.cpp  format.h  formatter.h  printIntToStream.h  printStringToStream.h  printToStream.h  saveToStream.h  vera_exclusions
(+7 files in other folders)
